fix flash sale card title overflow

--- a/frontend/src/scss/components/_flashSaleCard.scss
+++ b/frontend/src/scss/components/_flashSaleCard.scss
@@ -30,6 +30,11 @@
       flex-direction: column;
       justify-content: center;
       gap: 0.5em;
+      p {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
       .flash-card-main-info-cat {
         width: 100%;
         display: flex;
